--- a/j.klimt-portfolio/index.html
+++ b/j.klimt-portfolio/index.html
@@ -176,7 +176,7 @@
      <div class="grid_3">
       <div style="clear:both"></div>
          <div class="circle">
-          <i class="icon far fa-file-certificate fa-7x"></i>
+         <i class="far fa-file-certificate fa-7x"></i>
          </div>
        <div class="text-3"><a href="#">I have 15 certificates</a></div>
      </div>
