--- a/j.klimt-portfolio/index.html
+++ b/j.klimt-portfolio/index.html
@@ -106,7 +106,7 @@
         </h2>
         <p class="offset__1">I am a coding enthusiast.I love to code and </p>
         <p class="offset__1">My favourite pass time is photography </p>
-        <img src="image_72192707.JPG" alt="" class="fleft">
+        <img src="WhatsApp Image 2021-09-12 at 10.49.09 PM.jpeg" alt="" class="fleft">
         <div class="extra_wrapper">
           <div class="text-1">
             L. Maithili Saran Reddy
