--- a/j.klimt-portfolio/index.html
+++ b/j.klimt-portfolio/index.html
@@ -70,7 +70,7 @@
     <div class="container_12  ">
       <div class="grid_12 ">
         <h1 class="logo">
-          <a href="index.html">L. Maithili Saran Reddy</a>
+          <a href="index.html">Maithili Saran Reddy Lingala</a>
         </h1>
         <nav>
           <ul>
@@ -109,7 +109,7 @@
         <img src="WhatsApp Image 2021-09-12 at 10.49.09 PM.jpeg" alt="" class="fleft">
         <div class="extra_wrapper">
           <div class="text-1">
-            L. Maithili Saran Reddy
+            Maithili Saran Reddy Lingala
           </div>
           <div class="text-2 color1">
             <a href="#">Photographer</a> &bull;
@@ -339,7 +339,7 @@
   <div class="container_12">
     <div class="grid_12">
       <div class="copyright"> &copy; <span id="copyright-year">2014</span>| <a href="#">Privacy Policy </a> <br>
-       Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">Maithili saran lingala</a>
+       Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">Maithili Saran Reddy Lingala</a>
       </div>
     </div>
   </div>
