--- a/j.klimt-portfolio/index.html
+++ b/j.klimt-portfolio/index.html
@@ -70,7 +70,7 @@
     <div class="container_12  ">
       <div class="grid_12 ">
         <h1 class="logo">
-          <a href="index.html">Maithili Saran Reddy Lingala</a>
+          <a href="index.html">L. Maithili Saran Reddy</a>
         </h1>
         <nav>
           <ul>
